WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104907
Fix unused parameter compile warnings
https://bugs.webkit.org/show_bug.cgi?id=104907
Summary
Fix unused parameter compile warnings
Seokju Kwon
Reported
2012-12-13 06:05:09 PST
Use UNUSED_PARAM macro to fix build warning -Wunused-parameter when ENABLE_INSPECTOR is disabled.
Attachments
Patch
(7.78 KB, patch)
2012-12-13 06:18 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2012-12-13 06:18:50 PST
Created
attachment 179261
[details]
Patch
Kentaro Hara
Comment 2
2012-12-13 06:55:28 PST
Comment on
attachment 179261
[details]
Patch Looks ok
WebKit Review Bot
Comment 3
2012-12-13 17:16:09 PST
Comment on
attachment 179261
[details]
Patch Clearing flags on attachment: 179261 Committed
r137688
: <
http://trac.webkit.org/changeset/137688
>
WebKit Review Bot
Comment 4
2012-12-13 17:16:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug