Fix unused parameter compile warnings https://bugs.webkit.org/show_bug.cgi?id=104907

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2012-12-13
Reviewed by Kentaro Hara.

Use UNUSED_PARAM macro to fix build warning -Wunused-parameter
when ENABLE_INSPECTOR is disabled.

Source/WebKit/efl:

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::evaluateInWebInspector):

Source/WebKit2:

* UIProcess/API/C/WKInspector.cpp:
(WKInspectorGetPage):
(WKInspectorIsVisible):
(WKInspectorIsFront):
(WKInspectorShow):
(WKInspectorClose):
(WKInspectorShowConsole):
(WKInspectorShowResources):
(WKInspectorShowMainResourceForFrame):
(WKInspectorIsAttached):
(WKInspectorAttach):
(WKInspectorDetach):
(WKInspectorIsDebuggingJavaScript):
(WKInspectorToggleJavaScriptDebugging):
(WKInspectorIsProfilingJavaScript):
(WKInspectorToggleJavaScriptProfiling):
(WKInspectorIsProfilingPage):
(WKInspectorTogglePageProfiling):
* UIProcess/API/C/WKPage.cpp:
(WKPageGetInspector):

Canonical link: https://commits.webkit.org/123211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137688 268f45cc-cd09-0410-ab3c-d52691b4dbfc