Source/WebKit2/UIProcess/API/C/WKInspector.cpp
@@ -28,6 +28,7 @@
 
 #include "WKAPICast.h"
 #include "WebInspectorProxy.h"
+#include <wtf/UnusedParam.h>
 
 using namespace WebKit;
 
@@ -45,6 +46,7 @@ WKPageRef WKInspectorGetPage(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toAPI(toImpl(inspectorRef)->page());
 #else
+    UNUSED_PARAM(inspectorRef);
     return 0;
 #endif
 }
@@ -54,6 +56,7 @@ bool WKInspectorIsVisible(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toImpl(inspectorRef)->isVisible();
 #else
+    UNUSED_PARAM(inspectorRef);
     return false;
 #endif
 }
@@ -63,6 +66,7 @@ bool WKInspectorIsFront(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toImpl(inspectorRef)->isFront();
 #else
+    UNUSED_PARAM(inspectorRef);
     return false;
 #endif
 }
@@ -71,6 +75,8 @@ void WKInspectorShow(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->show();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -78,6 +84,8 @@ void WKInspectorClose(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->close();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -85,6 +93,8 @@ void WKInspectorShowConsole(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->showConsole();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -92,6 +102,8 @@ void WKInspectorShowResources(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->showResources();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -99,6 +111,9 @@ void WKInspectorShowMainResourceForFrame(WKInspectorRef inspectorRef, WKFrameRef
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->showMainResourceForFrame(toImpl(frameRef));
+#else
+    UNUSED_PARAM(inspectorRef);
+    UNUSED_PARAM(frameRef);
 #endif
 }
 
@@ -107,6 +122,7 @@ bool WKInspectorIsAttached(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toImpl(inspectorRef)->isAttached();
 #else
+    UNUSED_PARAM(inspectorRef);
     return false;
 #endif
 }
@@ -115,6 +131,8 @@ void WKInspectorAttach(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->attach();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -122,6 +140,8 @@ void WKInspectorDetach(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->detach();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -130,6 +150,7 @@ bool WKInspectorIsDebuggingJavaScript(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toImpl(inspectorRef)->isDebuggingJavaScript();
 #else
+    UNUSED_PARAM(inspectorRef);
     return false;
 #endif
 }
@@ -138,6 +159,8 @@ void WKInspectorToggleJavaScriptDebugging(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->toggleJavaScriptDebugging();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -146,6 +169,7 @@ bool WKInspectorIsProfilingJavaScript(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toImpl(inspectorRef)->isProfilingJavaScript();
 #else
+    UNUSED_PARAM(inspectorRef);
     return false;
 #endif
 }
@@ -154,6 +178,8 @@ void WKInspectorToggleJavaScriptProfiling(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->toggleJavaScriptProfiling();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
 
@@ -162,6 +188,7 @@ bool WKInspectorIsProfilingPage(WKInspectorRef inspectorRef)
 #if ENABLE(INSPECTOR)
     return toImpl(inspectorRef)->isProfilingPage();
 #else
+    UNUSED_PARAM(inspectorRef);
     return false;
 #endif
 }
@@ -170,5 +197,7 @@ void WKInspectorTogglePageProfiling(WKInspectorRef inspectorRef)
 {
 #if ENABLE(INSPECTOR)
     toImpl(inspectorRef)->togglePageProfiling();
+#else
+    UNUSED_PARAM(inspectorRef);
 #endif
 }
