Source/WebKit2/UIProcess/API/C/WKPage.cpp
@@ -34,6 +34,7 @@
 #include "WebPageProxy.h"
 #include "WebProcessProxy.h"
 #include <WebCore/Page.h>
+#include <wtf/UnusedParam.h>
 
 #ifdef __BLOCKS__
 #include <Block.h>
@@ -187,6 +188,7 @@ WKInspectorRef WKPageGetInspector(WKPageRef pageRef)
 #if defined(ENABLE_INSPECTOR) && ENABLE_INSPECTOR
     return toAPI(toImpl(pageRef)->inspector());
 #else
+    UNUSED_PARAM(pageRef);
     return 0;
 #endif
 }
